# ICSE-23-PTM-Artifact

./: INSTALL  README.md  REQUIREMENTS  STATUS  bumpVerison.bash  pyproject.toml  requirements.txt
data/: README.md  data_cleaning.ipynb  npm list - Sheet1.csv  plotArchitectureData.py  transformed packages.csv
data/hftorrent_8-15-2022/HFTorrent/: .gitattributes
data/hftorrent_8-15-2022/splitRepoNames/: xaa  xab  xac  xad  xae  xaf  xag  xah  xai  xaj  xak  xal  xam  xan  xao  xap  xaq  xar  xas  xat  xau  xav  xaw  xax  xay  xaz  xba  xbb  xbc  xbd  xbe  xbf  xbg  xbh  xbi  xbj  xbk  xbl  xbm  xbn  (+24 more)
data/top_downloads/: top20model_downloads.csv  top20npm_downloads.csv  top20pypi_downloads.csv
html/: hfl_chinese-macbert-base.html
icse_23_model_hub_artifact/: README.md
icse_23_model_hub_artifact/downloadHFTorrent/: convertBareRepoToNormal.bash  downloadHFTorrent.bash  extractRepoNames.py  splitRepoNamesFile.bash
icse_23_model_hub_artifact/downloadHTML/: bulkDownloader.bash  downloadMalwareHTML.py  downloadOrganizationList.py
icse_23_model_hub_artifact/downloadModelInformation/: main.py
icse_23_model_hub_artifact/malwareScanning/: main.py
icse_23_model_hub_artifact/measureRepositoriesWithSignedCommits/: main.py
icse_23_model_hub_artifact/measureVerifiedOrganizations/: main.py
icse_23_model_hub_artifact/modelDocumentation/: README.md  README_temp2.md  audit1.py  autoeval.py  clone.py  main.py  transparency.py
icse_23_model_hub_artifact/modelDownloads/: downloadList.xlsx  main.py  plot.py
icse_23_model_hub_artifact/motivation/: README.md  modelinfo.py  temp_README.md  transparency.py
icse_23_model_hub_artifact/plotData/: extractReposWithArchitectureToCSV.py  extractReposWithDatasetToCSV.py  plotDatasetData.py  plotSubplots.py  ptm.py
icse_23_model_hub_artifact/reproducibility/: .manual-compare.py.swp  README.md  arguments.py  audit.py  classification.py  detection.py  image_classification.py  main.py  sentiment_analysis.py  text_classification.py  workflow.py
interview_study/: Demographic_Data.csv  Interview Protocol - PTNN.docx  InterviewSaturation.ipynb  README.md
interview_study/Interview Transcripts with Memos/: Interview-01-20200703.docx  Interview-02-20220704.docx  Interview-03-20220710.docx  Interview-04-20220715.docx  Interview-05-20220715.docx  Interview-06-20220719.docx  Interview-07-20220719.docx  Interview-08-20220727.docx  Interview-09-20220802.docx  Interview-10-20220803.docx  Interview-11-20220804.docx  Interview-12-20220805.docx  Memos.xlsx
reproducibility/: README.md  manual-compare.py
