[tool.poetry]
name = "icse-23-model_hub_artifact"
authors = []
version = "0.1.5"
description = "Code artifacts for ICSE 2023 "
license = "Apache 2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
icse-download-model-information = "icse_23_model_hub_artifact.downloadModelInformation.main:main"
icse-extract-model-names = "icse_23_model_hub_artifact.downloadHFTorrent.extractRepoNames:main"
icse-extract-model-downloads = "icse_23_model_hub_artifact.modelDownloads.main:main"
icse-plot-model-downloads = "icse_23_model_hub_artifact.modelDownloads.plot:main"
icse-download-malware-html = "icse_23_model_hub_artifact.downloadHTML.downloadMalwareHTML:main"
icse-download-organization-list = "icse_23_model_hub_artifact.downloadHTML.downloadOrganizationList:main"
icse-scan-for-malware = "icse_23_model_hub_artifact.malwareScanning.main:main"
icse-measure-repos-with-signed-commits = "icse_23_model_hub_artifact.measureRepositoriesWithSignedCommits.main:main"
icse-measure-verified-organizations = "icse_23_model_hub_artifact.measureVerifiedOrganizations.main:main"
