[tool.poetry]
name = "icse-23-model_hub_artifact"
authors = []
version = "0.1.5"
description = "Code artifacts for ICSE 2023 "
license = "Apache 2.0"
[tool.poetry.dependencies]
python="^3.8"
tqdm = "^4.64.1"
progress = "^1.6"
bs4 = "^0.0.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
requests = "^2.28.2"
transformers = "^4.26.1"
matplotlib = "^3.7.0"
datasets = "^2.9.0"
opencv-python = "^4.7.0.68"
torchmetrics = "^0.11.1"
timm = "^0.6.12"
huggingface-hub = "^0.12.0"
lxml = "^4.9.2"
numpy = "^1.24.2"
torchaudio = "^0.13.1"
pandas = "^1.5.3"
loguru = "^0.6.0"
poetry = "^1.3.2"
ndjson = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
icse-download-model-information = "icse_23_model_hub_artifact.downloadModelInformation.main:main"
icse-extract-model-names = "icse_23_model_hub_artifact.downloadHFTorrent.extractRepoNames:main"
icse-extract-model-downloads = "icse_23_model_hub_artifact.modelDownloads.main:main"
icse-plot-model-downloads = "icse_23_model_hub_artifact.modelDownloads.plot:main"
icse-download-malware-html = "icse_23_model_hub_artifact.downloadHTML.downloadMalwareHTML:main"
icse-download-organization-list = "icse_23_model_hub_artifact.downloadHTML.downloadOrganizationList:main"
icse-scan-for-malware = "icse_23_model_hub_artifact.malwareScanning.main:main"
icse-measure-repos-with-signed-commits = "icse_23_model_hub_artifact.measureRepositoriesWithSignedCommits.main:main"
icse-measure-verified-organizations = "icse_23_model_hub_artifact.measureVerifiedOrganizations.main:main"
